[package]
name = "utile_cli"
version = "0.1.0"
authors = ["Poliveira"]
edition = "2018"
description = "Useful abstractions for pancurses."
readme = "README.md"
repository = "https://github.com/meltedot/utile_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16.1"