[package]
name = "utile_cli"
version = "0.2.0"
authors = ["meltedot"]
edition = "2018"
description = "Useful abstractions for pancurses."
readme = "README.md"
repository = "https://github.com/meltedot/utile_cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16.1"